--- a/frontend/src/components/Modals/LogOutModal/LogOutModal.module.css
+++ b/frontend/src/components/Modals/LogOutModal/LogOutModal.module.css
@@ -166,3 +166,7 @@
   background: var(--cl-black);
   color: var(--cl-white);
 }
+
+.bodyModalOpen {
+  overflow: hidden;
+}
